--- a/SalesmanSolver/MainWindow.xaml
+++ b/SalesmanSolver/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SalesmanSolver"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="TSPSolver" Height="480" Width="800" ResizeMode="NoResize">
     <Grid>
-
+        <Button x:Name="Button_ClearCanvas" Content="Clear" HorizontalAlignment="Left" Margin="10,413,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20" Width="227"/>
+        <Button x:Name="Button_SolveGraph" Content="Solve" HorizontalAlignment="Left" Margin="247,413,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20" Width="543"/>
+        <Rectangle x:Name="Rect_Map" HorizontalAlignment="Center" Height="398" Margin="0,10,0,0" Stroke="Black" VerticalAlignment="Top" Width="780"/>
     </Grid>
 </Window>
